--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
           if_false: ${{ steps.vars.outputs.TAG }}-${{ steps.vars.outputs.DATE }}
 
       - name: Archive
-        run: zip -r -0 QuoteLockXCustomFonts-Systemless-${{ steps.suffix.outputs.value }}.zip ./ -x "*.git*" "LICENSE" "README.md"
+        run: zip -r -0 QuoteLockXCustomFonts-Systemless-${{ steps.suffix.outputs.value }}.zip ./ -x "*.git*" "LICENSE" "README.md" "update.json"
 
       - name: Upload Artifact
         if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
@@ -46,4 +46,4 @@ jobs:
         with:
           artifacts: ./QuoteLockXCustomFonts-Systemless-${{ steps.suffix.outputs.value }}.zip
           token: ${{ secrets.RELEASE_GITHUB_TOKEN}}
-          body: Released by [Github Actions](https://github.com/Yubyf/QuoteLockX-CustomFontsPrivate/actions)
+          body: Released by [Github Actions](https://github.com/Yubyf/QuoteLockX-CustomFonts/actions)
